--- a/DesctopHITE/DesctopHITE.csproj
+++ b/DesctopHITE/DesctopHITE.csproj
@@ -35,8 +35,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -166,6 +175,54 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppDateFolder\ClassFolder\FrameNavigationClass.cs" />
+    <Compile Include="AppDateFolder\ModelFolder\DesktopHiteModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DesktopHiteModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\DesktopHiteModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\DesktopHiteModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DesktopHiteModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\GenderTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\INNWorkerTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\MedicalBookTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\PassportTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\PlaceResidenceTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\RoleTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\SalaryCardTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\SnilsTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\StatusTable.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\sysdiagrams.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="AppDateFolder\ModelFolder\WorkerTabe.cs">
+      <DependentUpon>DesktopHiteModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="PerformanceFolder\PageFolder\PanelMenuFolder\MenuSettingsPage.xaml.cs">
       <DependentUpon>MenuSettingsPage.xaml</DependentUpon>
     </Compile>
@@ -221,6 +278,14 @@
     </EmbeddedResource>
     <Resource Include="ContentFolder\FontFolder\Material-Design-Iconic-Font.ttf" />
     <Resource Include="ContentFolder\FontFolder\segmdl2.ttf" />
+    <EntityDeploy Include="AppDateFolder\ModelFolder\DesktopHiteModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DesktopHiteModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="AppDateFolder\ModelFolder\DesktopHiteModel.edmx.diagram">
+      <DependentUpon>DesktopHiteModel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -230,7 +295,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="AppDateFolder\ModelFolder\" />
     <Folder Include="PerformanceFolder\UserControlFolder\" />
   </ItemGroup>
   <ItemGroup>
@@ -248,6 +312,21 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="ContentFolder\ImageFolder\NoImage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="AppDateFolder\ModelFolder\DesktopHiteModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DesktopHiteModel.Context.cs</LastGenOutput>
+      <DependentUpon>DesktopHiteModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="AppDateFolder\ModelFolder\DesktopHiteModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DesktopHiteModel.edmx</DependentUpon>
+      <LastGenOutput>DesktopHiteModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
