--- a/DesctopHITE/DesctopHITE.csproj
+++ b/DesctopHITE/DesctopHITE.csproj
@@ -174,6 +174,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppDateFolder\ClassFolder\AppConnectClass.cs" />
     <Compile Include="AppDateFolder\ClassFolder\FrameNavigationClass.cs" />
     <Compile Include="AppDateFolder\ModelFolder\DesktopHiteModel.Context.cs">
       <AutoGen>True</AutoGen>
