--- a/DesctopHITE/DesctopHITE.csproj
+++ b/DesctopHITE/DesctopHITE.csproj
@@ -341,6 +341,7 @@
       <DependentUpon>DesktopHiteModel.edmx</DependentUpon>
       <LastGenOutput>DesktopHiteModel.cs</LastGenOutput>
     </Content>
+    <Content Include="AppDateFolder\ScriptSQLFolder\DesctopHityScript.sql" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
