--- a/DesctopHITE/App.config
+++ b/DesctopHITE/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="DesctopHiteEntities" connectionString="metadata=res://*/AppDateFolder.ModelFolder.DesktopHiteModel.csdl|res://*/AppDateFolder.ModelFolder.DesktopHiteModel.ssdl|res://*/AppDateFolder.ModelFolder.DesktopHiteModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARIXYANA\SQLEXPRESS;initial catalog=DesctopHite;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DesctopHiteEntities" connectionString="metadata=res://*/AppDateFolder.ModelFolder.DesktopHiteModel.csdl|res://*/AppDateFolder.ModelFolder.DesktopHiteModel.ssdl|res://*/AppDateFolder.ModelFolder.DesktopHiteModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=marixyana-lapto\sql;initial catalog=DesctopHite;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
