--- a/DesctopHITE/DesctopHITE.csproj
+++ b/DesctopHITE/DesctopHITE.csproj
@@ -322,6 +322,7 @@
       <DependentUpon>ModelHite.edmx</DependentUpon>
     </None>
     <Resource Include="ContentFolder\FontFolder\Dosis-VariableFont_wght.ttf" />
+    <Resource Include="ContentFolder\FontFolder\RubikWetPaint-Regular.ttf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
