--- a/DesctopHITE/App.config
+++ b/DesctopHITE/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DesctopHITE.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -20,4 +23,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <userSettings>
+    <DesctopHITE.Properties.Settings>
+      <setting name="LoginUserRemember" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PasswordUserRemember" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="MeaningRemember" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </DesctopHITE.Properties.Settings>
+  </userSettings>
 </configuration>
