--- a/DesctopHITE/App.config
+++ b/DesctopHITE/App.config
@@ -3,7 +3,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="DesctopHITE.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -11,7 +11,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="DesctopHiteEntities" connectionString="metadata=res://*/AppDateFolder.ModelFolder.ModelHite.csdl|res://*/AppDateFolder.ModelFolder.ModelHite.ssdl|res://*/AppDateFolder.ModelFolder.ModelHite.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=marixyana\sqlexpress;initial catalog=DesctopHite;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DesctopHiteEntities" connectionString="metadata=res://*/AppDateFolder.ModelFolder.ModelHite.csdl|res://*/AppDateFolder.ModelFolder.ModelHite.ssdl|res://*/AppDateFolder.ModelFolder.ModelHite.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=marixyana-lapto\sql;initial catalog=DesctopHite;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
