--- a/DesctopHITE/DesctopHITE.csproj
+++ b/DesctopHITE/DesctopHITE.csproj
@@ -198,6 +198,7 @@
     <Compile Include="AppDateFolder\ClassFolder\AppConnectClass.cs" />
     <Compile Include="AppDateFolder\ClassFolder\CaptchaClass.cs" />
     <Compile Include="AppDateFolder\ClassFolder\FrameNavigationClass.cs" />
+    <Compile Include="AppDateFolder\ClassFolder\HolidayClass.cs" />
     <Compile Include="AppDateFolder\ClassFolder\TimeClass.cs" />
     <Compile Include="AppDateFolder\ModelFolder\GenderTable.cs">
       <DependentUpon>ModelHite.tt</DependentUpon>
